[tool.poetry]
name = "desk"
version = "0.1.0"
description = "Access to Desk.com data"
authors = ["Robert Erb <bob.erb@aashe.org>"]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.22"

[tool.poetry.dev-dependencies]
ipython = "^7.10"
flake8 = "^3.7"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
